package types

type Controller struct {
	ID [8]byte
	Update 
}
